# PHX

./: Cargo.toml  README.md  build.rs  package-lock.json
PPI/: README.md
PPI/ppi-frontend/: package-lock.json  package.json
PPI/ppi-frontend/src/: App.css  App.js
PPI/ppi-frontend/src/pages/: LandingPage.css  LandingPage.js  PackagesPage.js
platform/: Cargo.toml
src/: main.rs
src/cli/: Cargo.toml
src/core/: Cargo.toml  main.rs
src/phx_core/: config.rs  config_structs.rs  mod.rs
src/registery/: Cargo.toml
tests/: config.toml
