[package]
name = "phx"
version = "0.1.0"
edition = "2021"
# Specify a build script (to dynamically set the binary name)
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"
serde_derive = "1.0"

[[bin]]
name = "phx"
path = "src/main.rs"

[profile.release]
